# modernc20

./: README.md
hw1/task_1/: commands.sh
hw1/task_2/: CMakeLists.txt  build_script.sh  build_script.sh.save  install.sh
hw2/: link.txt  task1  task1.cpp  task2  task2.cpp
hw3/: CMakeLists.txt
hw3/src/: CMakeCache.txt  html_writer.cpp  image_browser.cpp  main.cpp
